fixed bug where action text would become distorted

--- a/des157a/final/proto/styles.css
+++ b/des157a/final/proto/styles.css
@@ -96,9 +96,10 @@ button {
     text-align: center;
     color: white;
     margin-bottom: 30px;
-    margin-top: 100px;
     width: 25%;
     margin-left: 37.5%;
+    position: relative;
+    top: 200px;
 }
 
 main div:first-child {
@@ -109,7 +110,7 @@ main div:first-child {
     height: 325px;
     justify-content: space-between;
     position: relative;
-    top: 100px;
+    top: 150px;
 }
 
 main div img {
